# julian-zandvoort

./: .gitignore  README.md  pyproject.toml
data/: 2023_0520_155441_001A.csv  2023_0520_160942_004A.csv  2023_0520_162442_006A.csv  combined.csv
notebooks/: combine-data.ipynb  map.ipynb  speed_gauge.ipynb
