[tool.poetry]
name = "julian-zandvoort"
version = "0.1.0"
description = ""
authors = ["Kaj Siebert <kaj@k-si.com>"]
readme = "README.md"
packages = [{include = "julian_zandvoort"}]

[tool.poetry.dependencies]
python = "^3.8"
kaleido = "0.2.1"
plotly = "^5.14.1"
jupyterlab = "^4.0.0"
pandas = "^2.0.1"
pillow = "^9.5.0"
pillow-avif-plugin = "^1.3.1"
tqdm = "^4.65.0"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
